--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,7 +14,7 @@ permalink: about/
     Add some text here about the original America's Water project.
 </p>
 <p>
-    We welcome thoughtful contributions from the community: see <a href="{{site.baseurl}}contribute">our contribution
+    We welcome thoughtful contributions from the community: see <a href="/contribute">our contribution
         guide</a> if you would like to share your thoughts with our readers.
 </p>
 
