--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -12,12 +12,12 @@ permalink: authors/
     {% assign author=long_author[1] %}
     <article class="post-card {% unless author.picture %}no-image{% endunless %}">
         {% if author.picture %}
-        <a class="post-card-image-link" href="{{ site.baseurl }}author/{{ author.username }}">
-            <div class="post-card-image" style="background-image: url({{ site.baseurl }}{{ author.picture }})"></div>
+        <a class="post-card-image-link" href="/author/{{ author.username }}">
+            <div class="post-card-image" style="background-image: url({{ author.picture }})"></div>
         </a>
         {% endif %}
         <div class="post-card-content">
-            <a class="post-card-content-link" href="{{ site.baseurl }}author/{{ author.username }}">
+            <a class="post-card-content-link" href="/author/{{ author.username }}">
                 <header class="post-card-header">
                     <h2 class="post-card-title">{{author.name}}</h2>
                 </header>
