--- a/404.html
+++ b/404.html
@@ -11,30 +11,27 @@ It's a good idea to keep this template as minimal as possible in terms of both f
 
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>{{ page.title }}</title>
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/assets/built/screen.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/built/screen.edited.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}assets/built/screen.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}assets/built/screen.edited.css" />
     <!-- This tag outputs SEO meta+structured data and other important settings -->
     {% include head.html %}
 </head>
-
 <body class="error-template">
     <div class="site-wrapper">
 
-        <header class="site-header outer {% if page.cover %}"
-            style="background-image: url({{ page.cover }})){% else %}no-cover{% endif %}">
+        <header class="site-header outer {% if page.cover %}" style="background-image: url({{ site.baseurl }}{{ page.cover }})){% else %}no-cover{% endif %}">
             <div class="inner">
                 <nav class="site-nav-center">
                     {% if site.logo %}
-                    <a class="site-nav-logo" href="/"><img src="{{ site.logo }}" alt="{{ site.title }}" /></a>
+                        <a class="site-nav-logo" href="{{ site.baseurl }}"><img src="{{site.baseurl}}{{ site.logo }}" alt="{{ site.title }}" /></a>
                     {% else %}
-                    <a class="site-nav-logo" href="/">{{ site.title }}</a>
+                        <a class="site-nav-logo" href="{{ site.baseurl }}">{{ site.title }}</a>
                     {% endif %}
                 </nav>
             </div>
@@ -46,7 +43,7 @@ It's a good idea to keep this template as minimal as possible in terms of both f
                 <section class="error-message">
                     <h1 class="error-code">404</h1>
                     <p class="error-description">Page not found</p>
-                    <a class="error-link" href="/">Go to the front page →</a>
+                    <a class="error-link" href="{{ site.baseurl }}">Go to the front page →</a>
                 </section>
             </div>
         </main>
@@ -64,5 +61,4 @@ It's a good idea to keep this template as minimal as possible in terms of both f
 
     </div>
 </body>
-
 </html>
