--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -13,16 +13,16 @@ permalink: tags/
     {% assign tag = long_tag[1] %}
     <article class="post-card {% unless author.picture %}no-image{% endunless %}">
         {% if tag.cover %}
-        <a class="post-card-image-link" href="/tag/{{ tag.name }}">
-            <div class="post-card-image" style="background-image: url({{ tag.cover }})"></div>
+        <a class="post-card-image-link" href="{{ site.baseurl }}tag/{{ tag.name }}">
+            <div class="post-card-image" style="background-image: url({{ tag.cover | relative_url }})"></div>
         </a>
         {% else %}
-        <a class="post-card-image-link" href="/tag/{{ tag.name }}">
-            <div class="post-card-image" style="background-image: url({{site.cover}})"></div>
+        <a class="post-card-image-link" href="{{ site.baseurl }}tag/{{ tag.name }}">
+            <div class="post-card-image" style="background-image: url({{ site.cover | relative_url }})"></div>
         </a>
         {% endif %}
         <div class="post-card-content">
-            <a class="post-card-content-link" href="/tag/{{ tag.name }}">
+            <a class="post-card-content-link" href="{{ site.baseurl }}tag/{{ tag.name }}">
                 <header class="post-card-header">
                     <h2 class="post-card-title">{{tag.long_name}}</h2>
                 </header>
